force-app/main/default/objects/Object1__c/fields/Object1to10__c.field-meta.xml
<CustomField>
    <fullName>Object1to10__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Object1to10</label>
    <referenceTo>Object10__c</referenceTo>
    <relationshipLabel>Objects1to10</relationshipLabel>
    <relationshipName>Object1to10</relationshipName>
    <type>Lookup</type>
</CustomField>