force-app/main/default/objects/Object1__c/fields/Specialization__c.field-meta.xml
<CustomField>
    <fullName>Specialization__c</fullName>
    <label>Specialization</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Education_Level__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Computers</fullName>
            </value>
            <value>
                <fullName>Electronics</fullName>
            </value>
            <value>
                <fullName>Robotics</fullName>
            </value>
            <value>
                <fullName>ECE</fullName>
            </value>
            <value>
                <fullName>CSE</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Mechanical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>