force-app/main/default/objects/Object1__c/recordTypes/RecType1.recordType-meta.xml
<RecordType>
    <fullName>RecType1</fullName>
    <active>true</active>
    <label>RecType1</label>
</RecordType>