force-app/main/default/objects/Object1__c/recordTypes/RecType2.recordType-meta.xml
<RecordType>
    <fullName>RecType2</fullName>
    <active>true</active>
    <label>RecType2</label>
</RecordType>